; ModuleID = '/home/carl/AnghaBench/kphp-kdb/common/extr_listcomp.c_interpolative_decoder_init.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/common/extr_listcomp.c_interpolative_decoder_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.list_decoder = type { i32*, i64, i32, i64, i64, i64 }
%struct.interpolative_decoder_stack_entry = type { i32, i32, i64, i32, i64 }

@INTERPOLATIVE_DECODER_NOT_EVALUATED = common dso_local global i32 0, align 4
@interpolative_decode_int = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.list_decoder*)* @interpolative_decoder_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @interpolative_decoder_init(%struct.list_decoder* %0) #0 {
  %2 = alloca %struct.list_decoder*, align 8
  %3 = alloca %struct.interpolative_decoder_stack_entry*, align 8
  store %struct.list_decoder* %0, %struct.list_decoder** %2, align 8
  %4 = load %struct.list_decoder*, %struct.list_decoder** %2, align 8
  %5 = getelementptr inbounds %struct.list_decoder, %struct.list_decoder* %4, i32 0, i32 5
  store i64 0, i64* %5, align 8
  %6 = load %struct.list_decoder*, %struct.list_decoder** %2, align 8
  %7 = getelementptr inbounds %struct.list_decoder, %struct.list_decoder* %6, i32 0, i32 4
  %8 = load i64, i64* %7, align 8
  %9 = inttoptr i64 %8 to %struct.interpolative_decoder_stack_entry*
  store %struct.interpolative_decoder_stack_entry* %9, %struct.interpolative_decoder_stack_entry** %3, align 8
  %10 = load %struct.interpolative_decoder_stack_entry*, %struct.interpolative_decoder_stack_entry** %3, align 8
  %11 = getelementptr inbounds %struct.interpolative_decoder_stack_entry, %struct.interpolative_decoder_stack_entry* %10, i32 0, i32 4
  store i64 0, i64* %11, align 8
  %12 = load %struct.interpolative_decoder_stack_entry*, %struct.interpolative_decoder_stack_entry** %3, align 8
  %13 = getelementptr inbounds %struct.interpolative_decoder_stack_entry, %struct.interpolative_decoder_stack_entry* %12, i32 0, i32 0
  store i32 -1, i32* %13, align 8
  %14 = load i32, i32* @INTERPOLATIVE_DECODER_NOT_EVALUATED, align 4
  %15 = load %struct.interpolative_decoder_stack_entry*, %struct.interpolative_decoder_stack_entry** %3, align 8
  %16 = getelementptr inbounds %struct.interpolative_decoder_stack_entry, %struct.interpolative_decoder_stack_entry* %15, i32 0, i32 3
  store i32 %14, i32* %16, align 8
  %17 = load %struct.list_decoder*, %struct.list_decoder** %2, align 8
  %18 = getelementptr inbounds %struct.list_decoder, %struct.list_decoder* %17, i32 0, i32 3
  %19 = load i64, i64* %18, align 8
  %20 = add nsw i64 %19, 1
  %21 = load %struct.interpolative_decoder_stack_entry*, %struct.interpolative_decoder_stack_entry** %3, align 8
  %22 = getelementptr inbounds %struct.interpolative_decoder_stack_entry, %struct.interpolative_decoder_stack_entry* %21, i32 0, i32 2
  store i64 %20, i64* %22, align 8
  %23 = load %struct.list_decoder*, %struct.list_decoder** %2, align 8
  %24 = getelementptr inbounds %struct.list_decoder, %struct.list_decoder* %23, i32 0, i32 2
  %25 = load i32, i32* %24, align 8
  %26 = load %struct.interpolative_decoder_stack_entry*, %struct.interpolative_decoder_stack_entry** %3, align 8
  %27 = getelementptr inbounds %struct.interpolative_decoder_stack_entry, %struct.interpolative_decoder_stack_entry* %26, i32 0, i32 1
  store i32 %25, i32* %27, align 4
  %28 = load %struct.list_decoder*, %struct.list_decoder** %2, align 8
  %29 = getelementptr inbounds %struct.list_decoder, %struct.list_decoder* %28, i32 0, i32 1
  store i64 0, i64* %29, align 8
  %30 = load %struct.list_decoder*, %struct.list_decoder** %2, align 8
  %31 = getelementptr inbounds %struct.list_decoder, %struct.list_decoder* %30, i32 0, i32 0
  store i32* @interpolative_decode_int, i32** %31, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
